2010-04-06  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-14-01
	* some fixes for handling of corrupted FED data
	
2010-03-05  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-14-00
	* more fixes for DQM event accounting

2010-02-15  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-13-04
	* fixes to make sure all DQM messages are sent before stop
	
2010-01-20  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-13-03
	* End-of-Lumi Handling (more fixes)
	
2010-01-12  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-13-02
	* End-of-Lumi Handling (fix include and typo)

2010-01-11  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-13-01
	* End-of-Lumi Handling (functional ???)

2009-12-17  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-13-00
	* End-of-Lumi Handling (dummied out for now)

2009-11-17  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-12-14
	* roll back of previous change found to crash RB in PB mode
	
2009-11-11  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-12-13
	* minor modification to fix of 00-12-11 to address possible 
	memleak

2009-11-06  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-12-12
	* change message for client process death and add warning when no event is saved to error stream

2009-11-02  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-12-11
	* possible fix for occasional RB crashes resulting from pathological events

2009-07-08  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-12-10
	* added parameter for resourcetable timeout and increased default to 12 s 

2009-07-08  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-12-09
	* fix for 64-bit compilation

2009-07-08  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-12-08
	* complete migration away from FEDNumbering getter functions
	
2009-07-02  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-12-07
	* added table of dqm shm cells and moved resetting of discard flag
	* for dqm up to reflect timing of actions
	