@@ -13,6 +13,8 @@
 
 
 namespace evf {
+
+  class EvffedFillerRB;
   
   class FUResource
   {
@@ -20,7 +22,7 @@ namespace evf {
     //
     // construction/destruction
     //
-    FUResource(UInt_t fuResourceId,log4cplus::Logger logger);
+    FUResource(UInt_t fuResourceId,log4cplus::Logger, EvffedFillerRB *);
     virtual ~FUResource();
     
     
@@ -109,7 +111,7 @@ namespace evf {
     UInt_t    eventSize_;
     
     evf::FUShmRawCell* shmCell_;
-    
+    EvffedFillerRB *frb_;    
 
     static unsigned int gtpDaqId_;
     static unsigned int gtpEvmId_;
