@@ -22,6 +22,8 @@
 
 
 namespace evf {
+
+  class EvffedFillerRB;
   
   class FUResourceTable : public toolbox::lang::Class
   {
@@ -33,7 +35,7 @@ namespace evf {
 		    UInt_t nbRawCells, UInt_t nbRecoCells, UInt_t nbDqmCells,
 		    UInt_t rawCellSize,UInt_t recoCellSize,UInt_t dqmCellSize,
 		    BUProxy* bu,SMProxy* sm,
-		    log4cplus::Logger logger, unsigned int) throw (evf::Exception);
+		    log4cplus::Logger logger, unsigned int, EvffedFillerRB*frb) throw (evf::Exception);
     virtual ~FUResourceTable();
     
     
@@ -41,6 +43,9 @@ namespace evf {
     // member functions
     //
     
+    // set fed filler
+    //    void setFedFiller(){frb_ = frb;}
+
     // set the run number
     void   setRunNumber(UInt_t runNumber) { runNumber_ = runNumber; }
 
@@ -247,7 +252,7 @@ namespace evf {
     UInt_t             runNumber_;
     
     toolbox::BSem      lock_;
-    
+    EvffedFillerRB    *frb_;    
   };
   
 } // namespace evf
